--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~7.0.0",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
@@ -20,7 +21,16 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.2",
+    "@types/googlemaps": "^3.38.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-table": "^1.15.5",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "jspdf": "^1.5.3",
+    "moment": "^2.24.0",
+    "ng-pick-datetime": "^7.0.0",
+    "ngx-print": "^1.2.0-beta.3",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
